--- a/Development/BE/tcrms/src/main/resources/application.properties
+++ b/Development/BE/tcrms/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=tcrms
+
+spring.profiles.include=postgresql
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.properties.hibernate.timezone.default_storage=NORMALIZE
