--- a/Development/FE/package.json
+++ b/Development/FE/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@material-ui/icons": "^4.11.3", // https://v4.mui.com/components/material-icons/
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
