--- a/Development/BE/tcrms/src/main/resources/application.properties
+++ b/Development/BE/tcrms/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.profiles.include=postgresql
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.timezone.default_storage=NORMALIZE
