[BE][Feat]: Update application.properties

--- a/Development/BE/tcrms/src/main/resources/application.properties
+++ b/Development/BE/tcrms/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=tcrms
 
 spring.profiles.include=postgresql
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.timezone.default_storage=NORMALIZE
