--- a/Development/FE/package.json
+++ b/Development/FE/package.json
@@ -12,7 +12,7 @@
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
-    "start": "sudo react-scripts start",
+    "start": "node osScript.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
