[FE][Feat]docu-submit page added

--- a/Development/FE/.env
+++ b/Development/FE/.env
@@ -5,3 +5,4 @@ REACT_APP_TEAM_SPARRING_WEIGHT_MALE_MEM3_LIMIT=224
 REACT_APP_TEAM_SPARRING_WEIGHT_MALE_MEM4_LIMIT=296
 REACT_APP_TEAM_SPARRING_WEIGHT_FEMALE_MEM3_LIMIT=190
 REACT_APP_TEAM_SPARRING_WEIGHT_FEMALE_MEM4_LIMIT=251
+REACT_APP_FILE_LIMIT_SIZE_MB=10
